--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="header_height">192dp</dimen>
     <dimen name="header_left_padding">16dp</dimen>
     <dimen name="perfil_image_size">64dp</dimen>
+    <dimen name="floating_button_size">60dp</dimen>
+
 
 </resources>
