--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     android:id="@+id/cv"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    card_view:cardCornerRadius="1dp"
+    card_view:cardElevation="1dp"
+    >
 
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="200dp">
 
         <com.android.volley.toolbox.NetworkImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/car_photo"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="16dp"
+            android:scaleType="centerCrop"
+            android:transitionName="tImage"
             />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/model_name"
-            android:layout_below="@+id/car_photo"
-            android:textSize="30sp"
-            />
+        <LinearLayout
+            android:id="@+id/mainHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:selectableItemBackground"
+            android:orientation="horizontal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/car_base_price"
-            android:layout_below="@+id/model_name"
-            android:layout_alignParentRight="true"
-            />
+        <LinearLayout
+            android:id="@+id/carNameHolder"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:transitionName="tNameHolder">
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/model_name"
+                android:layout_below="@+id/car_photo"
+                android:textSize="30sp"
+                android:paddingLeft="10dp"
+                android:gravity="left"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/urlImage"
+                android:visibility="gone"
+
+                />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/car_base_price"
+
+                android:layout_marginStart="50dp"
+                />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
