--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -43,9 +43,17 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/model_name"
                 android:layout_below="@+id/car_photo"
-                android:textSize="30sp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:paddingLeft="10dp"
                 android:gravity="left"
+                android:textColor="#FFFFFF"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/model_id"
+                android:visibility="invisible"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -60,8 +68,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/car_base_price"
-
-                android:layout_marginStart="50dp"
+                android:textColor="#FFFFFF"
+                android:layout_marginStart="200dp"
                 />
         </LinearLayout>
 
