--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,16 +27,41 @@
       android:id="@+id/llEditTextHolder"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="#95000000">
+      android:background="#95000000"
+      android:orientation="horizontal"
+        >
+      <TextView
+          android:id="@+id/tvPromotion"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textAppearance="?android:attr/textAppearanceLarge"
+          android:textColor="@android:color/white"
+          android:layout_gravity="center"
+          android:text="Promoción:"
+          android:layout_marginStart="4dp"
+          />
 
       <EditText
         android:id="@+id/etTodo"
-        android:layout_width="match_parent"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:textColor="@android:color/white" />
+
+      <android.support.v7.widget.AppCompatButton
+          android:id="@+id/BValidate"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:padding="12dp"
+          android:layout_gravity="center"
+          android:textColor="#ffffff"
+          android:text="Validar"
+          android:background="#B2871C"
+          android:elevation="12dp"
+          />
+
 
     </LinearLayout>
 
