--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,32 +7,33 @@
             android:checked="true"
             android:icon="@drawable/ic_home"
             android:title="Home" />
-        <item
-            android:id="@+id/nav_productos"
-            android:icon="@drawable/ic_store"
-            android:title="Productos" />
-        <item
-            android:id="@+id/nav_carrito"
-            android:icon="@drawable/ic_shopping_cart"
-            android:title="Carrito" />
+        <!--<item-->
+            <!--android:id="@+id/nav_productos"-->
+            <!--android:icon="@drawable/ic_store"-->
+            <!--android:title="Productos" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_carrito"-->
+            <!--android:icon="@drawable/ic_shopping_cart"-->
+            <!--android:title="Carrito" />-->
         <item
             android:id="@+id/nav_ordenes"
             android:icon="@drawable/ic_truck"
             android:title="Ordenes" />
-        <item
-            android:id="@+id/nav_facturas"
-            android:icon="@drawable/ic_file_document"
-            android:title="Facturas" />
+        <!--<item-->
+            <!--android:id="@+id/nav_facturas"-->
+            <!--android:icon="@drawable/ic_file_document"-->
+            <!--android:title="Facturas" />-->
 
         <!-- Sección de configuración -->
         <item
             android:id="@+id/configuration_section"
-            android:title="Cerrar Sesión">
+            android:title="Cuenta">
             <menu>
                 <item
                     android:id="@+id/nav_log_out"
                     android:icon="@android:drawable/ic_lock_power_off"
-                    android:title="Configuración" />
+                    android:title="Cerrar Sesión"
+                    />
             </menu>
         </item>
     </group>
