--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,9 +4,59 @@
   android:layout_height="match_parent"
   android:orientation="vertical">
 
+
+
   <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card2"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        card_view:cardBackgroundColor="@android:color/white"
+        card_view:cardElevation="6dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardUseCompatPadding="true"
+        android:layout_gravity="end"
+        android:elevation="16dp"
+        >
+      <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textTotal"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:text="TOTAL"
+            />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="4dp"
+            android:id="@+id/dollar"
+            android:src="@drawable/dollar2"
+            android:layout_toRightOf="@id/textTotal"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/total"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:textSize="20sp"
+            android:text="1200"
+            android:layout_toRightOf="@id/dollar"
+            />
+      </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
 
 
     <com.android.volley.toolbox.NetworkImageView
